--- a/_notebooks/2019-04-17-post-004.ipynb
+++ b/_notebooks/2019-04-17-post-004.ipynb
@@ -47,10 +47,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<table style=\"width:100%\">\n",
+    "<table>\n",
     "    <tr>\n",
-    "        <td><img src=\"https://kushajveersingh.github.io/blog/images/copied_from_nb/images/post_004/02.jpeg\"></td>\n",
-    "        <td><img src=\"https://kushajveersingh.github.io/blog/images/copied_from_nb/images/post_004/02.jpeg\"></td>\n",
+    "        <td><img src=\"https://raw.githubusercontent.com/KushajveerSingh/blog/master/images/extra_images/post_004/01.png\" width=\"100%\"></td>\n",
+    "        <td><img src=\"https://raw.githubusercontent.com/KushajveerSingh/blog/master/images/extra_images/post_004/02.png\"></td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "        <td colspan=\"2\"><center>Figure 1. Caption</center></td>\n",
@@ -59,17 +59,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hiHias"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "http://127.0.0.1:4000/_notebooks/images/post_004/01.png"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
   }
  ],
