--- a/_notebooks/2020-05-13-post-008.ipynb
+++ b/_notebooks/2020-05-13-post-008.ipynb
@@ -110,6 +110,70 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Download ghost-static-site-generator\n",
+    "This is the tool that we will use to get a static site out of our Ghost site. You can check the [official github repo](https://github.com/Fried-Chicken/ghost-static-site-generator) of the package for more details on the usage.\n",
+    "\n",
+    "To download the package run `npm install -g ghost-static-site-generator`. If you get errors run this command again. I ran this command twice and it worked. Maybe try `sudo` if it still not works.\n",
+    "\n",
+    "Now you can create your static site using `gssg --url=https://kushajveersingh.github.io/` and it will create a `static` folder in your current directory, from where you can copy the contents to your `.github.io` repo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Automating the above process\n",
+    "To automate the complete process and ensure that my `Ghost` repo and `.github.io` repo are in sync, I created this script.\n",
+    "\n",
+    "```\n",
+    "# Change git_folder, ghost_folder, url\n",
+    "# git_folder -> location of your .github.io repo\n",
+    "# ghost_folder -> location of the Ghost folder in which you are creating your site\n",
+    "# url -> The github address where your website will be published\n",
+    "git_folder=\"/home/kushaj/Desktop/Github/KushajveerSingh.github.io\"\n",
+    "ghost_folder=\"/home/kushaj/Desktop/Github/Ghost\"\n",
+    "url=\"https://kushajveersingh.github.io/\"\n",
+    "\n",
+    "# Remove all contents of git_folder\n",
+    "rm -r $git_folder/*\n",
+    "\n",
+    "# Generate static site using ghost-static-site-generator\n",
+    "# The contents of the site are directly placed in the git_folder\n",
+    "gssg --url $url --dest $git_folder\n",
+    "\n",
+    "# Commit the changes of git_folder\n",
+    "cd $git_folder\n",
+    "git add -A\n",
+    "git commit -m \"$1\"\n",
+    "git push origin master\n",
+    "\n",
+    "# Commit the changes of ghost_folder\n",
+    "cd $ghost_folder\n",
+    "git add -A\n",
+    "git commit -m \"$1\"\n",
+    "git push origin master\n",
+    "```\n",
+    "\n",
+    "You need to change only `git_folder`, `ghost_folder` and url as per your requirements."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Usage\n",
+    "```\n",
+    "./generate_script.sh \"initial commit\"\n",
+    "```\n",
+    "Your repositories will be pushed to Github with the provided commit message."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
