--- a/_posts/2020-05-13-post-008.md
+++ b/_posts/2020-05-13-post-008.md
@@ -118,6 +118,59 @@ knex-migrator i</code></pre>
 </div>
 </div>
 </div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Download-ghost-static-site-generator">Download ghost-static-site-generator<a class="anchor-link" href="#Download-ghost-static-site-generator"> </a></h2><p>This is the tool that we will use to get a static site out of our Ghost site. You can check the <a href="https://github.com/Fried-Chicken/ghost-static-site-generator">official github repo</a> of the package for more details on the usage.</p>
+<p>To download the package run <code>npm install -g ghost-static-site-generator</code>. If you get errors run this command again. I ran this command twice and it worked. Maybe try <code>sudo</code> if it still not works.</p>
+<p>Now you can create your static site using <code>gssg --url=https://kushajveersingh.github.io/</code> and it will create a <code>static</code> folder in your current directory, from where you can copy the contents to your <code>.github.io</code> repo.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Automating-the-above-process">Automating the above process<a class="anchor-link" href="#Automating-the-above-process"> </a></h2><p>To automate the complete process and ensure that my <code>Ghost</code> repo and <code>.github.io</code> repo are in sync, I created this script.</p>
+
+<pre><code># Change git_folder, ghost_folder, url
+# git_folder -&gt; location of your .github.io repo
+# ghost_folder -&gt; location of the Ghost folder in which you are creating your site
+# url -&gt; The github address where your website will be published
+git_folder="/home/kushaj/Desktop/Github/KushajveerSingh.github.io"
+ghost_folder="/home/kushaj/Desktop/Github/Ghost"
+url="https://kushajveersingh.github.io/"
+
+# Remove all contents of git_folder
+rm -r $git_folder/*
+
+# Generate static site using ghost-static-site-generator
+# The contents of the site are directly placed in the git_folder
+gssg --url $url --dest $git_folder
+
+# Commit the changes of git_folder
+cd $git_folder
+git add -A
+git commit -m "$1"
+git push origin master
+
+# Commit the changes of ghost_folder
+cd $ghost_folder
+git add -A
+git commit -m "$1"
+git push origin master</code></pre>
+<p>You need to change only <code>git_folder</code>, <code>ghost_folder</code> and url as per your requirements.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Usage">Usage<a class="anchor-link" href="#Usage"> </a></h3>
+<pre><code>./generate_script.sh "initial commit"</code></pre>
+<p>Your repositories will be pushed to Github with the provided commit message.</p>
+
+</div>
+</div>
+</div>
 </div>
  
 
