--- a/_notebooks/2018-09-14-post-001.ipynb
+++ b/_notebooks/2018-09-14-post-001.ipynb
@@ -9,7 +9,7 @@
     "- toc: true\n",
     "- comments: true\n",
     "- author: Kushajveer Singh\n",
-    "- categories: [machine-learning]\n",
+    "- categories: [notes, machine-learning]\n",
     "- image: images/preview/post_001.jpeg\n",
     "- badges: false"
    ]
@@ -260,13 +260,6 @@
     "3. An Introduction to Statistical Learning: with Applications in R\n",
     "4. The Elements of Statistical Learning Data Mining, inference and Prediction"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
