--- a/_notebooks/2019-02-18-post-002.ipynb
+++ b/_notebooks/2019-02-18-post-002.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/post_002/01.png \"Figure 1. File structure for my data folder. Each folder contains subfolder like ‘n01440764’ and the images for that class are placed in that folder.\")"
+    "![](images/post_002/01.jpeg \"Figure 1. File structure for my data folder. Each folder contains subfolder like ‘n01440764’ and the images for that class are placed in that folder.\")"
    ]
   },
   {
@@ -364,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/post_002/02.png)"
+    "![](images/post_002/02.jpeg)"
    ]
   },
   {
