--- a/_notebooks/2019-04-11-post-003.ipynb
+++ b/_notebooks/2019-04-11-post-003.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/post_003/01.png \"Figure 1. Taken from the paper. Shows a clear comparison of all normalizations.\")"
+    "![](images/post_003/01.jpeg \"Figure 1. Taken from the paper. Shows a clear comparison of all normalizations.\")"
    ]
   },
   {
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/post_003/03.png \"Figure 3. Learning rate finder result with bs=64.\")"
+    "![](images/post_003/03.jpeg \"Figure 3. Learning rate finder result with bs=64.\")"
    ]
   },
   {
@@ -190,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/post_003/04.png \"Figure 4. Loss values with bs=64\")"
+    "![](images/post_003/04.jpeg \"Figure 4. Loss values with bs=64\")"
    ]
   },
   {
@@ -212,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/post_003/05.png \"Figure 5. Learning rate finder result with bs=2\")"
+    "![](images/post_003/05.jpeg \"Figure 5. Learning rate finder result with bs=2\")"
    ]
   },
   {
@@ -226,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/post_003/06.png \"Figure 6. Loss values with bs=2\")"
+    "![](images/post_003/06.jpeg \"Figure 6. Loss values with bs=2\")"
    ]
   },
   {
@@ -254,14 +254,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/post_003/07.png \"Figure 7. Learning rate finder result with bs=256\")"
+    "![](images/post_003/07.jpeg \"Figure 7. Learning rate finder result with bs=256\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/post_003/08.png \"Figure 8. Loss values with bs=256\")"
+    "![](images/post_003/08.jpeg \"Figure 8. Loss values with bs=256\")"
    ]
   },
   {
@@ -280,13 +280,6 @@
     "\n",
     "For constant learning rate, I think weight standardization still makes sense as there we do not change our learning rate in the training process, so we must benefit from the smoother loss function. But in the case of cyclic learning, it does not offer us a benefit."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
