--- a/_posts/2018-09-14-post-001.md
+++ b/_posts/2018-09-14-post-001.md
@@ -5,7 +5,7 @@ title: "Theoretical Machine Learning: Probabilistic and Statistical Math"
 toc: true
 comments: true
 author: Kushajveer Singh
-categories: [machine-learning]
+categories: [notes, machine-learning]
 image: images/preview/post_001.jpeg
 badges: false
 nb_path: _notebooks/2018-09-14-post-001.ipynb
