--- a/_posts/2019-04-11-post-003.md
+++ b/_posts/2019-04-11-post-003.md
@@ -45,7 +45,7 @@ layout: notebook
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="/blog/images/copied_from_nb/images/post_003/01.png" alt="" title="Figure 1. Taken from the paper. Shows a clear comparison of all normalizations."></p>
+<p><img src="/blog/images/copied_from_nb/images/post_003/01.jpeg" alt="" title="Figure 1. Taken from the paper. Shows a clear comparison of all normalizations."></p>
 
 </div>
 </div>
@@ -179,7 +179,7 @@ layout: notebook
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="/blog/images/copied_from_nb/images/post_003/03.png" alt="" title="Figure 3. Learning rate finder result with bs=64."></p>
+<p><img src="/blog/images/copied_from_nb/images/post_003/03.jpeg" alt="" title="Figure 3. Learning rate finder result with bs=64."></p>
 
 </div>
 </div>
@@ -195,7 +195,7 @@ layout: notebook
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="/blog/images/copied_from_nb/images/post_003/04.png" alt="" title="Figure 4. Loss values with bs=64"></p>
+<p><img src="/blog/images/copied_from_nb/images/post_003/04.jpeg" alt="" title="Figure 4. Loss values with bs=64"></p>
 
 </div>
 </div>
@@ -216,7 +216,7 @@ layout: notebook
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="/blog/images/copied_from_nb/images/post_003/05.png" alt="" title="Figure 5. Learning rate finder result with bs=2"></p>
+<p><img src="/blog/images/copied_from_nb/images/post_003/05.jpeg" alt="" title="Figure 5. Learning rate finder result with bs=2"></p>
 
 </div>
 </div>
@@ -230,7 +230,7 @@ layout: notebook
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="/blog/images/copied_from_nb/images/post_003/06.png" alt="" title="Figure 6. Loss values with bs=2"></p>
+<p><img src="/blog/images/copied_from_nb/images/post_003/06.jpeg" alt="" title="Figure 6. Loss values with bs=2"></p>
 
 </div>
 </div>
@@ -257,14 +257,14 @@ layout: notebook
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="/blog/images/copied_from_nb/images/post_003/07.png" alt="" title="Figure 7. Learning rate finder result with bs=256"></p>
+<p><img src="/blog/images/copied_from_nb/images/post_003/07.jpeg" alt="" title="Figure 7. Learning rate finder result with bs=256"></p>
 
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="/blog/images/copied_from_nb/images/post_003/08.png" alt="" title="Figure 8. Loss values with bs=256"></p>
+<p><img src="/blog/images/copied_from_nb/images/post_003/08.jpeg" alt="" title="Figure 8. Loss values with bs=256"></p>
 
 </div>
 </div>
