--- a/_notebooks/2019-04-17-post-004.ipynb
+++ b/_notebooks/2019-04-17-post-004.ipynb
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/post_004/02.jpeg \"Figure 2. (left) shows the architecture of the model. (right) a 3D view of the model. Figure taken from paper.\")"
+    "![](images/post_004/02.jpeg \"Figure 2. \\(left\\) shows the architecture of the model. \\(right\\) a 3D view of the model. Figure taken from paper.\")"
    ]
   },
   {
