--- a/_notebooks/2020-05-13-post-008.ipynb
+++ b/_notebooks/2020-05-13-post-008.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/post_008/01.png)"
+    "![](images/post_008/01.jpeg)"
    ]
   },
   {
