--- a/_notebooks/2020-06-19-post-009.ipynb
+++ b/_notebooks/2020-06-19-post-009.ipynb
@@ -65,9 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Session 7C - Does Learning Require Memorization? A Short Tale about a Long Tail\n",
     "by **Vitaly Feldman** [video link](https://youtu.be/sV59uoWJRnk)"
@@ -75,9 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Overview of problem\n",
     "For state-of-the-art deep learning algorithms on text/images, we see this pattern\n",
@@ -91,9 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Defining label memorization\n",
     "$mem(A,S,i)$ where \n",
@@ -109,36 +103,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "> Tip: Memorization can be thought of as the difference between training and test error (i.e. generalization gap). If this value is large, we can say the model memorized more."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Why memorization is important?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "![](images/post_009/01.png)"
+    "![](images/post_009/01.jpeg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "The four pictures in the training set are not much useful for learning what is a truck. Because in real life we would not see trucks like these. But if we memorize the first example, we get better result for the corresponding test image shown and same for the third image.\n",
     "\n",
@@ -147,27 +133,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "> Note: In the above example it is assumed that test set is the real representation of real life i.e. we are not arguing that images in test set are not even real life images of truck. This is a separate problem of not making good test sets"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "So memorization is useful in some cases and in worst case is bad."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Conclusion\n",
     "Label memorization is necessary for optimal generalization on long-tailed data distributions (not algorithm-specific)."
