--- a/_posts/2020-05-13-post-008.md
+++ b/_posts/2020-05-13-post-008.md
@@ -43,7 +43,7 @@ layout: notebook
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="/blog/images/copied_from_nb/images/post_008/01.png" alt=""></p>
+<p><img src="/blog/images/copied_from_nb/images/post_008/01.jpeg" alt=""></p>
 
 </div>
 </div>
