--- a/_posts/2020-06-19-post-009.md
+++ b/_posts/2020-06-19-post-009.md
@@ -121,7 +121,7 @@ $$mem(A,S,i)=Pr(i\ in\ train)-Pr(i\ in\ test)$$
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="/blog/images/copied_from_nb/images/post_009/01.png" alt=""></p>
+<p><img src="/blog/images/copied_from_nb/images/post_009/01.jpeg" alt=""></p>
 
 </div>
 </div>
