--- a/_notebooks/2019-11-11-post-007.ipynb
+++ b/_notebooks/2019-11-11-post-007.ipynb
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/post_007/01.png \"Figure 1. Mish activation function\")"
+    "![](images/post_007/01.jpeg \"Figure 1. Mish activation function\")"
    ]
   },
   {
