--- a/_posts/2019-11-11-post-007.md
+++ b/_posts/2019-11-11-post-007.md
@@ -125,7 +125,7 @@ layout: notebook
 
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="/blog/images/copied_from_nb/images/post_007/01.png" alt="" title="Figure 1. Mish activation function"></p>
+<p><img src="/blog/images/copied_from_nb/images/post_007/01.jpeg" alt="" title="Figure 1. Mish activation function"></p>
 
 </div>
 </div>
