--- a/_notebooks/2019-04-17-post-004.ipynb
+++ b/_notebooks/2019-04-17-post-004.ipynb
@@ -432,7 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/post_004/06.jpeg \"Figure 6. Architecture of Encoder model used in SPADE (optional)\")"
+    "![](images/post_004/06.jpeg \"Figure 6. Architecture of Encoder model used in SPADE,optional\")"
    ]
   },
   {
